package org.loamok.jobs.enums;

/**
 *
 * @author Huby Franck
 */
public interface LabelledEnum {
    String getName();
    String getLabel();
}
